Fix image path for GitHub Pages

--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
     <title>FamCan</title>
     <link
       rel="icon"
-      href="/img/favicon32.png"
+      href="img/favicon32.png"
       sizes="32x32"
       type="image/png"
     />
     <link
       rel="apple-touch-icon"
-      href="/img/favicon180.png"
+      href="img/favicon180.png"
       sizes="180x180"
     />
     <link
@@ -26,7 +26,7 @@
       <div class="container">
         <h1>
           <img
-            src="/img/rogo.png"
+            src="img/rogo.png"
             alt="FamCan"
             width="217"
             height="63"
@@ -86,7 +86,7 @@
         </div>
         <div class="card">
           <a href="#" class="card-link"
-            ><img src="/img/popular-item2.jpg" alt="焚き火台" /></a>
+            ><img src="img/popular-item2.jpg" alt="焚き火台" /></a>
           <h4>焚き火台</h4>
           <p>
             市販されている薪がそのまま置けるのに、超軽量でコンパクト！揺れる炎を見ながら、ゆったりと過ごす。家族団らんのひと時です。
@@ -94,7 +94,7 @@
         </div>
         <div class="card">
           <a href="#" class="card-link"
-            ><img src="/img/popular-item3.jpg" alt="最強のテント" /></a>
+            ><img src="img/popular-item3.jpg" alt="最強のテント" /></a>
           <h4>最強のテント</h4>
           <p>
             設営は「ちょっとだけ大変」くらいがちょうどいい。協力プレイで家族のチームワーク力をアップ！みんなでワイワイ楽しくテントをたてよう！
@@ -102,7 +102,7 @@
         </div>
         <div class="card">
           <a href="#" class="card-link"
-            ><img src="/img/popular-item4.jpg" alt="ファミリーランタン" /></a>
+            ><img src="img/popular-item4.jpg" alt="ファミリーランタン" /></a>
           <h4>ファミリーランタン</h4>
           <p>
             人工的な明るさを多く持ち込むのはナンセンス。メインランタンは温かみがあり、強力な光を放つホワイトガソリンを燃料とするガソリンランタンがおすすめです。
@@ -110,7 +110,7 @@
         </div>
         <div class="card">
           <a href="#" class="card-link"
-            ><img src="/img/popular-item5.jpg" alt="スーパー蚊取り線香" /></a>
+            ><img src="img/popular-item5.jpg" alt="スーパー蚊取り線香" /></a>
           <h4>スーパー蚊取り線香</h4>
           <p>
             夏のキャンプの絶対的必需品が蚊取り線香。高温多湿な東南アジアで発売された、強力な虫よけ効果をご体感ください。1巻の燃焼時間は約7時間。ユスリカ、アブ、ブユ（ブヨ）に効果があります。
@@ -118,7 +118,7 @@
         </div>
         <div class="card">
           <a href="#" class="card-link"
-            ><img src="/img/popular-item6.jpg" alt="最高のストーブ" /></a>
+            ><img src="img/popular-item6.jpg" alt="最高のストーブ" /></a>
           <h4>最高のストーブ</h4>
           <p>
             冬キャンプを快適にするなら小型の石油ストーブがおすすめ！電源がなくてもOK！お湯を沸かしたり、お餅やお芋を焼いたりもできます。対流式はテント全体が温まりやすく、真冬でも暖かいキャンプが楽しめます。
@@ -137,7 +137,7 @@
           <a href="#" class="feature-link">
             <div class="feature-img">
               <img
-                src="/img/feature1.jpg"
+                src="img/feature1.jpg"
                 alt="家族で非認知能力を高める"
               />
               <div class="text">家族で非認知能力を高める</div>
@@ -148,7 +148,7 @@
           <a href="#" class="feature-link"
             ><div class="feature-img">
               <img
-                src="/img/feature2.jpg"
+                src="img/feature2.jpg"
                 alt="失敗を楽しむ心のゆとり"
               />
               <div class="text">失敗を楽しむ心のゆとり</div>
@@ -159,7 +159,7 @@
           <a href="#" class="feature-link"
             ><div class="feature-img">
               <img
-                src="/img/feature3.jpg"
+                src="img/feature3.jpg"
                 alt="好奇心が子供の情緒を育てる"
               />
               <div class="text">好奇心が子供の情緒を育てる</div>
@@ -174,7 +174,7 @@
       <div class="container">
         <h1>
           <img
-            src="/img/rogo.png"
+            src="img/rogo.png"
             alt="家族でもっと、そとあそび/FamCan"
           />
         </h1>
