style:widen text area width in .feature .item .text

--- a/index.html
+++ b/index.html
@@ -28,8 +28,7 @@
           <img
             src="img/rogo.png"
             alt="FamCan"
-            width="217"
-            height="63"
+            width="160"
           />
         </h1>
         <nav>
@@ -53,7 +52,7 @@
         </form>
         <!-- スマートフォン用ハンバーガーマーク -->
         <a class="m-menu" href="#"
-          ><img src="img/menu.png" alt="menu" width="50" height="50"
+          ><img src="img/menu.png" alt="menu" width="36"
         /></a>
       </div>
     </header>
@@ -175,7 +174,7 @@
         <h1>
           <img
             src="img/rogo.png"
-            alt="家族でもっと、そとあそび/FamCan"
+            alt="家族でもっと、そとあそび/FamCan" width="130"
           />
         </h1>
         <nav>
