fix: adjust responsive style

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     <section class="hero">
       <h2>ファミリーで外にでかけよう！</h2>
       <p>
-        自然の中で全力で遊ぶことは、家族の絆を強くする。<br />こんな時代だからこそ<br />「不便」を知恵と工夫とアイテムで快適に楽しもう！
+        そとあそびは、家族の絆を強くする。<br />我が家に合ったアイテムを装備して<br />ファミリーキャンプに出発しよう！
       </p>
     </section>
 
