Add tablet layout adjustments

--- a/index.html
+++ b/index.html
@@ -4,17 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>FamCan</title>
-    <link
-      rel="icon"
-      href="img/favicon32.png"
-      sizes="32x32"
-      type="image/png"
-    />
-    <link
-      rel="apple-touch-icon"
-      href="img/favicon180.png"
-      sizes="180x180"
-    />
+    <link rel="icon" href="img/favicon32.png" sizes="32x32" type="image/png" />
+    <link rel="apple-touch-icon" href="img/favicon180.png" sizes="180x180" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
@@ -25,17 +16,21 @@
     <header>
       <div class="container">
         <h1>
-          <img
-            src="img/rogo.png"
-            alt="FamCan"
-            width="160"
-          />
+          <img src="img/rogo.png" alt="FamCan" width="160" />
         </h1>
         <nav>
           <ul>
             <li>アイテム</li>
             <li>特集</li>
             <li>FamCanとは</li>
+          </ul>
+        </nav>
+        <nav class="ec-nav">
+          <ul>
+            <li><a href="#"><i class="fa-solid fa-magnifying-glass"></i></a></li>
+            <li><a href="#"><i class="fa-regular fa-heart"></i></a></li>
+            <li><a href="#"><i class="fa-solid fa-cart-arrow-down"></i></a></li>
+            <li><a href="#"><i class="fa-regular fa-user"></i></a></li>
           </ul>
         </nav>
         <address>
@@ -60,7 +55,7 @@
     <section class="hero">
       <h2>ファミリーで外にでかけよう！</h2>
       <p>
-        そとあそびは、家族の絆を強くする。<br />我が家に合ったアイテムを装備して<br />ファミリーキャンプに出発しよう！
+        そとあそびは、家族の絆を強くする<br />我が家に合ったアイテムを装備して<br />ファミリーキャンプに出発しよう！
       </p>
     </section>
 
@@ -73,10 +68,7 @@
         <div class="card">
           <span class="badge">NEW</span>
           <a href="#" class="card-link"
-            ><img
-              src="img/popular-item1.jpg"
-              alt="マルチグリドルパン"
-            />
+            ><img src="img/popular-item1.jpg" alt="マルチグリドルパン" />
           </a>
           <h4>マルチグリドルパン</h4>
           <p>
@@ -85,7 +77,8 @@
         </div>
         <div class="card">
           <a href="#" class="card-link"
-            ><img src="img/popular-item2.jpg" alt="焚き火台" /></a>
+            ><img src="img/popular-item2.jpg" alt="焚き火台"
+          /></a>
           <h4>焚き火台</h4>
           <p>
             市販されている薪がそのまま置けるのに、超軽量でコンパクト！揺れる炎を見ながら、ゆったりと過ごす。家族団らんのひと時です。
@@ -93,7 +86,8 @@
         </div>
         <div class="card">
           <a href="#" class="card-link"
-            ><img src="img/popular-item3.jpg" alt="最強のテント" /></a>
+            ><img src="img/popular-item3.jpg" alt="最強のテント"
+          /></a>
           <h4>最強のテント</h4>
           <p>
             設営は「ちょっとだけ大変」くらいがちょうどいい。協力プレイで家族のチームワーク力をアップ！みんなでワイワイ楽しくテントをたてよう！
@@ -101,7 +95,8 @@
         </div>
         <div class="card">
           <a href="#" class="card-link"
-            ><img src="img/popular-item4.jpg" alt="ファミリーランタン" /></a>
+            ><img src="img/popular-item4.jpg" alt="ファミリーランタン"
+          /></a>
           <h4>ファミリーランタン</h4>
           <p>
             人工的な明るさを多く持ち込むのはナンセンス。メインランタンは温かみがあり、強力な光を放つホワイトガソリンを燃料とするガソリンランタンがおすすめです。
@@ -109,7 +104,8 @@
         </div>
         <div class="card">
           <a href="#" class="card-link"
-            ><img src="img/popular-item5.jpg" alt="スーパー蚊取り線香" /></a>
+            ><img src="img/popular-item5.jpg" alt="スーパー蚊取り線香"
+          /></a>
           <h4>スーパー蚊取り線香</h4>
           <p>
             夏のキャンプの絶対的必需品が蚊取り線香。高温多湿な東南アジアで発売された、強力な虫よけ効果をご体感ください。1巻の燃焼時間は約7時間。ユスリカ、アブ、ブユ（ブヨ）に効果があります。
@@ -117,14 +113,15 @@
         </div>
         <div class="card">
           <a href="#" class="card-link"
-            ><img src="img/popular-item6.jpg" alt="最高のストーブ" /></a>
+            ><img src="img/popular-item6.jpg" alt="最高のストーブ"
+          /></a>
           <h4>最高のストーブ</h4>
           <p>
             冬キャンプを快適にするなら小型の石油ストーブがおすすめ！電源がなくてもOK！お湯を沸かしたり、お餅やお芋を焼いたりもできます。対流式はテント全体が温まりやすく、真冬でも暖かいキャンプが楽しめます。
           </p>
         </div>
       </div>
-      <button class="more-btn container">もっと見る</button>
+      <div class="container"><button class="more-btn">もっと見る</button></div>
     </section>
 
     <section class="feature">
@@ -135,10 +132,7 @@
         <li class="item">
           <a href="#" class="feature-link">
             <div class="feature-img">
-              <img
-                src="img/feature1.jpg"
-                alt="家族で非認知能力を高める"
-              />
+              <img src="img/feature1.jpg" alt="家族で非認知能力を高める" />
               <div class="text">家族で非認知能力を高める</div>
             </div></a
           >
@@ -146,10 +140,7 @@
         <li class="item">
           <a href="#" class="feature-link"
             ><div class="feature-img">
-              <img
-                src="img/feature2.jpg"
-                alt="失敗を楽しむ心のゆとり"
-              />
+              <img src="img/feature2.jpg" alt="失敗を楽しむ心のゆとり" />
               <div class="text">失敗を楽しむ心のゆとり</div>
             </div></a
           >
@@ -157,16 +148,21 @@
         <li class="item">
           <a href="#" class="feature-link"
             ><div class="feature-img">
-              <img
-                src="img/feature3.jpg"
-                alt="好奇心が子供の情緒を育てる"
-              />
+              <img src="img/feature3.jpg" alt="好奇心が子供の情緒を育てる" />
               <div class="text">好奇心が子供の情緒を育てる</div>
             </div></a
           >
         </li>
+            <li class="item">
+          <a href="#" class="feature-link"
+            ><div class="feature-img">
+              <img src="img/feature4.jpg" alt="キャンプ飯おすすめギア" />
+              <div class="text">キャンプ飯のおすすめギア</div>
+            </div></a
+          >
+        </li>
       </ul>
-      <button class="more-btn container">もっと見る</button>
+      <div class="container"><button class="more-btn">もっと見る</button></div>
     </section>
 
     <footer>
@@ -174,7 +170,8 @@
         <h1>
           <img
             src="img/rogo.png"
-            alt="家族でもっと、そとあそび/FamCan" width="130"
+            alt="家族でもっと、そとあそび/FamCan"
+            width="130"
           />
         </h1>
         <nav>
