Fix missing quote in feature-list class

--- a/index.html
+++ b/index.html
@@ -128,7 +128,8 @@
       <div class="heading-center">
         <h3>特集</h3>
       </div>
-      <ul class="feature-list container">
+      <div class="container">
+        <ul class="feature-list">
         <li class="item">
           <a href="#" class="feature-link">
             <div class="feature-img">
@@ -158,10 +159,12 @@
             ><div class="feature-img">
               <img src="img/feature4.jpg" alt="キャンプ飯おすすめギア" />
               <div class="text">キャンプ飯のおすすめギア</div>
-            </div></a
+            </div>
+            </a
           >
         </li>
       </ul>
+    </div>
       <div class="container"><button class="more-btn">もっと見る</button></div>
     </section>
 
