--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <h1>
           <img src="img/rogo.png" alt="FamCan" width="160" />
         </h1>
-        <nav>
+        <nav class="main-nav">
           <ul>
             <li>アイテム</li>
             <li>特集</li>
@@ -27,10 +27,18 @@
         </nav>
         <nav class="ec-nav">
           <ul>
-            <li><a href="#"><i class="fa-solid fa-magnifying-glass"></i></a></li>
-            <li><a href="#"><i class="fa-regular fa-heart"></i></a></li>
-            <li><a href="#"><i class="fa-solid fa-cart-arrow-down"></i></a></li>
-            <li><a href="#"><i class="fa-regular fa-user"></i></a></li>
+            <li>
+              <a href="#"><i class="fa-solid fa-magnifying-glass"></i></a>
+            </li>
+            <li>
+              <a href="#"><i class="fa-regular fa-heart"></i></a>
+            </li>
+            <li>
+              <a href="#"><i class="fa-solid fa-cart-arrow-down"></i></a>
+            </li>
+            <li>
+              <a href="#"><i class="fa-regular fa-user"></i></a>
+            </li>
           </ul>
         </nav>
         <address>
@@ -63,62 +71,64 @@
       <div class="heading-center">
         <h3>最強アイテム</h3>
       </div>
-      <div class="grid container">
-        <!-- card *3 -->
-        <div class="card">
-          <span class="badge">NEW</span>
-          <a href="#" class="card-link"
-            ><img src="img/popular-item1.jpg" alt="マルチグリドルパン" />
-          </a>
-          <h4>マルチグリドルパン</h4>
-          <p>
-            これ一つでキャンプ飯のレパートリーが広がる！煮る・焼く・炒める・揚げるが全てOK！お手入れも超絶カンタンな最強のマルチグリドルパン。
-          </p>
-        </div>
-        <div class="card">
-          <a href="#" class="card-link"
-            ><img src="img/popular-item2.jpg" alt="焚き火台"
-          /></a>
-          <h4>焚き火台</h4>
-          <p>
-            市販されている薪がそのまま置けるのに、超軽量でコンパクト！揺れる炎を見ながら、ゆったりと過ごす。家族団らんのひと時です。
-          </p>
-        </div>
-        <div class="card">
-          <a href="#" class="card-link"
-            ><img src="img/popular-item3.jpg" alt="最強のテント"
-          /></a>
-          <h4>最強のテント</h4>
-          <p>
-            設営は「ちょっとだけ大変」くらいがちょうどいい。協力プレイで家族のチームワーク力をアップ！みんなでワイワイ楽しくテントをたてよう！
-          </p>
-        </div>
-        <div class="card">
-          <a href="#" class="card-link"
-            ><img src="img/popular-item4.jpg" alt="ファミリーランタン"
-          /></a>
-          <h4>ファミリーランタン</h4>
-          <p>
-            人工的な明るさを多く持ち込むのはナンセンス。メインランタンは温かみがあり、強力な光を放つホワイトガソリンを燃料とするガソリンランタンがおすすめです。
-          </p>
-        </div>
-        <div class="card">
-          <a href="#" class="card-link"
-            ><img src="img/popular-item5.jpg" alt="スーパー蚊取り線香"
-          /></a>
-          <h4>スーパー蚊取り線香</h4>
-          <p>
-            夏のキャンプの絶対的必需品が蚊取り線香。高温多湿な東南アジアで発売された、強力な虫よけ効果をご体感ください。1巻の燃焼時間は約7時間。ユスリカ、アブ、ブユ（ブヨ）に効果があります。
-          </p>
-        </div>
-        <div class="card">
-          <a href="#" class="card-link"
-            ><img src="img/popular-item6.jpg" alt="最高のストーブ"
-          /></a>
-          <h4>最高のストーブ</h4>
-          <p>
-            冬キャンプを快適にするなら小型の石油ストーブがおすすめ！電源がなくてもOK！お湯を沸かしたり、お餅やお芋を焼いたりもできます。対流式はテント全体が温まりやすく、真冬でも暖かいキャンプが楽しめます。
-          </p>
+      <div class="container">
+        <div class="flex">
+          <!-- card *3 -->
+          <div class="card">
+            <span class="badge">NEW</span>
+            <a href="#" class="card-link"
+              ><img src="img/popular-item1.jpg" alt="マルチグリドルパン" />
+            </a>
+            <h4>マルチグリドルパン</h4>
+            <p>
+              これ一つでキャンプ飯のレパートリーが広がる！煮る・焼く・炒める・揚げるが全てOK！お手入れも超絶カンタンな最強のマルチグリドルパン。
+            </p>
+          </div>
+          <div class="card">
+            <a href="#" class="card-link"
+              ><img src="img/popular-item2.jpg" alt="焚き火台"
+            /></a>
+            <h4>焚き火台</h4>
+            <p>
+              市販されている薪がそのまま置けるのに、超軽量でコンパクト！揺れる炎を見ながら、ゆったりと過ごす。家族団らんのひと時です。
+            </p>
+          </div>
+          <div class="card">
+            <a href="#" class="card-link"
+              ><img src="img/popular-item3.jpg" alt="最強のテント"
+            /></a>
+            <h4>最強のテント</h4>
+            <p>
+              設営は「ちょっとだけ大変」くらいがちょうどいい。協力プレイで家族のチームワーク力をアップ！みんなでワイワイ楽しくテントをたてよう！
+            </p>
+          </div>
+          <div class="card">
+            <a href="#" class="card-link"
+              ><img src="img/popular-item4.jpg" alt="ファミリーランタン"
+            /></a>
+            <h4>ファミリーランタン</h4>
+            <p>
+              人工的な明るさを多く持ち込むのはナンセンス。メインランタンは温かみがあり、強力な光を放つホワイトガソリンを燃料とするガソリンランタンがおすすめです。
+            </p>
+          </div>
+          <div class="card">
+            <a href="#" class="card-link"
+              ><img src="img/popular-item5.jpg" alt="スーパー蚊取り線香"
+            /></a>
+            <h4>スーパー蚊取り線香</h4>
+            <p>
+              夏のキャンプの絶対的必需品が蚊取り線香。高温多湿な東南アジアで発売された、強力な虫よけ効果をご体感ください。1巻の燃焼時間は約7時間。ユスリカ、アブ、ブユ（ブヨ）に効果があります。
+            </p>
+          </div>
+          <div class="card">
+            <a href="#" class="card-link"
+              ><img src="img/popular-item6.jpg" alt="最高のストーブ"
+            /></a>
+            <h4>最高のストーブ</h4>
+            <p>
+              冬キャンプを快適にするなら小型の石油ストーブがおすすめ！電源がなくてもOK！お湯を沸かしたり、お餅やお芋を焼いたりもできます。対流式はテント全体が温まりやすく、真冬でも暖かいキャンプが楽しめます。
+            </p>
+          </div>
         </div>
       </div>
       <div class="container"><button class="more-btn">もっと見る</button></div>
@@ -130,41 +140,40 @@
       </div>
       <div class="container">
         <ul class="feature-list">
-        <li class="item">
-          <a href="#" class="feature-link">
-            <div class="feature-img">
-              <img src="img/feature1.jpg" alt="家族で非認知能力を高める" />
-              <div class="text">家族で非認知能力を高める</div>
-            </div></a
-          >
-        </li>
-        <li class="item">
-          <a href="#" class="feature-link"
-            ><div class="feature-img">
-              <img src="img/feature2.jpg" alt="失敗を楽しむ心のゆとり" />
-              <div class="text">失敗を楽しむ心のゆとり</div>
-            </div></a
-          >
-        </li>
-        <li class="item">
-          <a href="#" class="feature-link"
-            ><div class="feature-img">
-              <img src="img/feature3.jpg" alt="好奇心が子供の情緒を育てる" />
-              <div class="text">好奇心が子供の情緒を育てる</div>
-            </div></a
-          >
-        </li>
-            <li class="item">
-          <a href="#" class="feature-link"
-            ><div class="feature-img">
-              <img src="img/feature4.jpg" alt="キャンプ飯おすすめギア" />
-              <div class="text">キャンプ飯のおすすめギア</div>
-            </div>
-            </a
-          >
-        </li>
-      </ul>
-    </div>
+          <li class="item">
+            <a href="#" class="feature-link">
+              <div class="feature-img">
+                <img src="img/feature1.jpg" alt="家族で非認知能力を高める" />
+                <div class="text">家族で非認知能力を高める</div>
+              </div></a
+            >
+          </li>
+          <li class="item">
+            <a href="#" class="feature-link"
+              ><div class="feature-img">
+                <img src="img/feature2.jpg" alt="失敗を楽しむ心のゆとり" />
+                <div class="text">失敗を楽しむ心のゆとり</div>
+              </div></a
+            >
+          </li>
+          <li class="item">
+            <a href="#" class="feature-link"
+              ><div class="feature-img">
+                <img src="img/feature3.jpg" alt="好奇心が子供の情緒を育てる" />
+                <div class="text">好奇心が子供の情緒を育てる</div>
+              </div></a
+            >
+          </li>
+          <li class="item">
+            <a href="#" class="feature-link"
+              ><div class="feature-img">
+                <img src="img/feature4.jpg" alt="キャンプ飯おすすめギア" />
+                <div class="text">キャンプ飯のおすすめギア</div>
+              </div>
+            </a>
+          </li>
+        </ul>
+      </div>
       <div class="container"><button class="more-btn">もっと見る</button></div>
     </section>
 
