Style: refine header transparency and adjust button sizing

--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
         </h1>
         <nav class="main-nav">
           <ul>
-            <li>アイテム</li>
-            <li>特集</li>
-            <li>FamCanとは</li>
+            <li><a href="#">アイテム</a></li>
+            <li><a href="#">特集</a></li>
+            <li><a href="#">FamCanとは</a></li>
           </ul>
         </nav>
         <nav class="ec-nav">
