add contact section to all HTML files

--- a/index.html
+++ b/index.html
@@ -20,9 +20,10 @@
         </h1>
         <nav class="main-nav">
           <ul>
-            <li><a href="#">アイテム</a></li>
-            <li><a href="#">特集</a></li>
-            <li><a href="#">FamCanとは</a></li>
+            <li><a href="products.html">アイテム</a></li>
+            <li><a href="feature.html">特集</a></li>
+            <li><a href="about.html">FamCanとは</a></li>
+            <li><a href="contact.html">お問い合わせ</a></li>
           </ul>
         </nav>
         <nav class="ec-nav">
@@ -188,10 +189,11 @@
         </h1>
         <nav>
           <ul>
-            <li><a href="#">アイテム</a></li>
-            <li><a href="#">特集</a></li>
-            <li><a href="#">FamCanとは</a></li>
+            <li><a href="products.html">アイテム</a></li>
+            <li><a href="feature.html">特集</a></li>
+            <li><a href="about.html">FamCanとは</a></li>
           </ul>
+          <li><a href="contact.html">お問い合わせ</a></li>
         </nav>
 
         <address>
