feat: create about page

--- a/about.html
+++ b/about.html
@@ -16,7 +16,9 @@
     <header>
       <div class="container">
         <h1>
-          <img src="img/rogo.png" alt="FamCan" width="160" />
+          <a href="index.html">
+            <img src="img/rogo.png" alt="FamCan" width="160"
+          /></a>
         </h1>
         <nav class="main-nav">
           <ul>
@@ -60,13 +62,89 @@
         /></a>
       </div>
     </header>
-    <nav class="breadcrumb">
-      <a href="index.html"></a>
-    </nav>
-    <main>
+    <div class="container">
+      <nav class="breadcrumb">
+        <a href="index.html">HOME</a> &gt;
+        <span>FamCanとは</span>
+      </nav>
+    </div>
+    <div class="about-visual"></div>
+    <main class="about-main">
+      <div class="container">
+        <section class="about-content">
+          <h2>FamCanについて</h2>
+          <img src="img/about2.jpg" alt="FamCanとは" />
+          <h3>ファミリーキャンプをすべての人に</h3>
+          <p>
+            いつも不思議でした。
+            なぜキャンプをしている家族は、あんなにも笑顔で、仲が良いのだろうと。<br /><br />
+            ソロキャンプをしていたころ、周りのファミリーを眺めながら、
+            「家族でキャンプをすると、何が違うんだろう？」
+            そんなことをよく考えていました。
+            <br /><br />
+            結婚して、子どもが生まれ、家族で初めてキャンプに行ったとき、
+            その答えがふっと腑に落ちました。
+            キャンプという“非日常”がくれるもの。
+            それは、家族が自然と向き合い、笑い合い、語り合える、特別で尊い時間でした。<br /><br />
+            日常ではなかなか取れない家族の時間も、
+            キャンプに出かけると不思議と増えていく。 会話も、笑顔も、絆も。
+            <br /><br />
+            FamCanは、そんな家族の時間をもっと多くの人に届けたい。
+            その想いから生まれました。
+          </p>
+        </section>
 
+        <section class="about-message">
+          <img src="img/outdoor.png" alt="outdoor">
+          <p>
+            「さぁ、キャンプに行こうか」<br />そんな一声に、<br />「やったー！うれしい！」<br />「いいよー」<br />「めんどくさいな。でも行くよ」<br />「たまには親孝行するか…」<br />「親父、キャンプ行かない？」<br />「子供にキャンプ経験させたくて、親父とお袋も一緒にどう？」<br /><br />そんなふうに、家族それぞれの気持ちが重なり合って、<br />ひとつの“家族の物語”が生まれていく。<br /><br />キャンプには、家族の距離をそっと近づけてくれる力があります。<br /><br />さぁ、そとに出かけよう！
+          </p>
+        </section>
+        <section class="about-values">
+      <span class="abou-ttitle">【 FamCanのこだわり 】</span>
+          <ol>
+            <li><span>
+              家族で使いやすいキャンプ用品だけを集めること</span>
+            </li>
+            <li><span>
+              家族の物語が生まれることを大切にすること</span>
+            </li>
+            <li><span>家族の絆を深めるアイテムを届けること</span></li>
+            <li><span>大人も子どもも、あそびごころを忘れずに楽しめること</span></li>
+            <li><span>
+              はじめてのキャンプでも安心して選べるラインナップであること</span>
+            </li>
+            <li><span>
+              「またこれ持って行こう」と思えるアイテムであること</span>
+            </li>
+            <li><span>デザインと機能性のバランスにこだわること</span></li>
+            <li><span>自然や環境へのやさしさを大事にすること</span></li>
+            <li><span>
+              家族のスタイルに合わせた楽しみ方を提案していくこと</span>
+            </li>
+            <li><span>
+              「ファミリーキャンプを、すべての人に」という想いを、忘れない</span>
+            </li>
+          </ol>
+        </section>
+        <section class="about-photo">
+        <img src="img/about3.jpg" alt="ハンモック" />
+        </section>
+        <section class="about-mission">
+        <h3>FamCanミッション</h3>
+        <p>
+          家族の時間を、もっと自由に。
+          FamCanは、これからも“家族のキャンプ”を応援します。
+        </p>
+        </section>
+      </div>
     </main>
-    <!--1024*288-->
+    <div class="container">
+      <nav class="breadcrumb">
+        <a href="index.html">HOME</a> &gt;
+        <span>FamCanとは</span>
+      </nav>
+    </div>
 
     <footer>
       <div class="container">
